--- a/.github/workflows/delete_stack.yml
+++ b/.github/workflows/delete_stack.yml
@@ -19,14 +19,9 @@ permissions:
 jobs:
   delete-services:
     runs-on: ubuntu-latest
+    outputs:
+      services: ${{ steps.set-services.outputs.services }}
     steps:
-      - name: Set up AWS credentials
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ github.event.inputs.aws-region }}
-
       - name: Set Services from Input
         id: set-services
         run: |
@@ -38,12 +33,12 @@ jobs:
           fi
 
   delete-stack:
-    if: contains(steps.set-services.outputs.services, 'access-analyser') || contains(steps.set-services.outputs.services, 'guard-duty') || contains(steps.set-services.outputs.services, 'inspector') || contains(steps.set-services.outputs.services, 'macie') || contains(steps.set-services.outputs.services, 'securityhub') || contains(steps.set-services.outputs.services, 'detective') || contains(steps.set-services.outputs.services, 'config')
+    if: ${{ contains(needs.delete-services.outputs.services, 'access-analyser') || contains(needs.delete-services.outputs.services, 'guard-duty') || contains(needs.delete-services.outputs.services, 'inspector') || contains(needs.delete-services.outputs.services, 'macie') || contains(needs.delete-services.outputs.services, 'securityhub') || contains(needs.delete-services.outputs.services, 'detective') || contains(needs.delete-services.outputs.services, 'config') }}
     runs-on: ubuntu-latest
     steps:
       - name: Delete Stacks for Specified Services
         run: |
-          services="${{ steps.set-services.outputs.services }}"
+          services="${{ needs.delete-services.outputs.services }}"
           IFS=',' read -ra service_list <<< "$services"
           for service in "${service_list[@]}"; do
             echo "Deleting stacks for service: $service"
@@ -51,13 +46,13 @@ jobs:
           done
 
   delete-stackset:
-    if: contains(steps.set-services.outputs.services, 'access-analyser') || contains(steps.set-services.outputs.services, 'guard-duty') || contains(steps.set-services.outputs.services, 'inspector') || contains(steps.set-services.outputs.services, 'macie') || contains(steps.set-services.outputs.services, 'securityhub') || contains(steps.set-services.outputs.services, 'detective') || contains(steps.set-services.outputs.services, 'config')
+    if: ${{ contains(needs.delete-services.outputs.services, 'access-analyser') || contains(needs.delete-services.outputs.services, 'guard-duty') || contains(needs.delete-services.outputs.services, 'inspector') || contains(needs.delete-services.outputs.services, 'macie') || contains(needs.delete-services.outputs.services, 'securityhub') || contains(needs.delete-services.outputs.services, 'detective') || contains(needs.delete-services.outputs.services, 'config') }}
     runs-on: ubuntu-latest
     needs: delete-stack
     steps:
       - name: Delete StackSets for Specified Services
         run: |
-          services="${{ steps.set-services.outputs.services }}"
+          services="${{ needs.delete-services.outputs.services }}"
           IFS=',' read -ra service_list <<< "$services"
           for service in "${service_list[@]}"; do
             echo "Deleting stackset for service: $service"
